<resources>
    <string name="app_name">海乐管家</string>
    <string name="sure">确定</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="save">保存</string>
    <string name="please_input">请输入</string>
    <string name="please_select">请选择</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="unBind">解绑</string>
    <string name="unBind_success">解绑成功</string>
    <string name="delete_success">删除成功</string>
    <string name="edit">编辑</string>
    <string name="out_of_service">已停用</string>
    <string name="enabled">已启用</string>
    <string name="in_use">启用中</string>
    <string name="finish">完成</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="break_down">故障</string>
    <string name="break_down_type">故障类型</string>
    <string name="break_down_desc">故障描述</string>
    <string name="search">搜索</string>
    <string name="update">修改</string>
    <string name="copy">复制</string>
    <string name="can_appointment">可预约</string>
    <string name="cant_appointment">不可预约</string>
    <string name="scan_add">扫码添加</string>
    <string name="update_success">修改成功</string>
    <string name="update_failure">修改失败</string>
    <string name="upload_failure">上传失败</string>
    <string name="save_to_local">保存到本地</string>
    <string name="shared_to">分享至</string>
    <string name="save_to_album">保存到相册</string>
    <string name="send_to_wechat">发送到微信</string>
    <string name="status">状态</string>
    <string name="operate">操作</string>
    <string name="operate_success">操作成功</string>
    <string name="for_take">拍照</string>
    <string name="for_album">相册</string>
    <string name="capture_light">补光</string>
    <string name="capture_album">相册</string>
    <string name="qrcode">二维码</string>
    <string name="oncode">条形码</string>
    <string name="withdraw">提现</string>
    <string name="withdraw_success">提现成功</string>
    <string name="type">类型</string>
    <string name="all">全部</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="name1">名称</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="i_know">知道了</string>
    <string name="default1">默认</string>
    <string name="enable">启用</string>
    <string name="disEnable">停用</string>
    <string name="tip">提示</string>
    <string name="search_history">搜索历史</string>
    <string name="search_keyword">搜索关键字</string>
    <string name="scan">扫一扫</string>
    <string name="opened">已开启</string>
    <string name="closed">已关闭</string>
    <string name="next">下一步</string>
    <string name="manager">管理</string>
    <string name="device">设备</string>
    <string name="idle">空闲</string>
    <string name="running">运行</string>
    <string name="unfold">展开</string>
    <string name="fold">收起</string>
    <string name="sure_export">确认导出</string>
    <string name="more">更多</string>
    <string name="single_select_dialog">单选框</string>
    <string name="multi_select_dialog">多选框</string>
    <string name="empty_content">暂无内容信息</string>
    <string name="empty_device">暂无设备信息</string>
    <string name="login_name">登录</string>
    <string name="login_account_password">账号密码登录</string>
    <string name="login_phone_login">手机号登录</string>
    <string name="login_app_type">商家端</string>
    <string name="login_phone_tag">中国（+86）</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_tag">忘记密码？</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_code_send">获取验证码</string>
    <string name="send_success">发送成功</string>
    <string name="reset_login_password">重置登录密码</string>
    <string name="login_old_password_hint">请输入旧密码</string>
    <string name="login_new_password_hint">请输入新密码（6–12位数字或字母）</string>
    <string name="login_new_password_again_hint">请再次输入新密码</string>
    <string name="agreement_hint">根据国家法律法规的要求，我们更新了《隐私政策》，帮助您了解我们收集、使用、存储和共享个人信息的情况，特别是我们所采集的个人信息类型及用途，同时您还可以了解到您所共享的相关权利和实现途径，以及我们为了保护好您的个人信息安全所采取的相关策略。</string>
    <string name="login_agreement_hint">已阅读并同意《隐私协议》</string>
    <string name="register_agreement_hint">已阅读并同意《海乐管家隐私协议》</string>
    <string name="main_tab_home">首页</string>
    <string name="monitoring">监控</string>
    <string name="device_monitoring">设备监控</string>
    <string name="total_device_num">总设备数</string>
    <string name="online_device">在线设备</string>
    <string name="online_device_state">在线设备运行状态</string>
    <string name="device_category_num_percent">设备类型数量占比</string>
    <string name="statistics">统计</string>
    <string name="data_statistics">数据统计</string>
    <string name="day_data">日数据</string>
    <string name="week_data">周数据</string>
    <string name="month_data">月数据</string>
    <string name="year_data">年数据</string>
    <string name="data_order_num">订单量</string>
    <string name="data_revenue">收益</string>
    <string name="data_active_user">活跃用户量</string>
    <string name="data_add_user">新增用户量</string>
    <string name="device_pay_order">设备支付订单</string>
    <string name="data_active_device">活跃设备数</string>
    <string name="data_device_frequency">设备频次</string>
    <string name="more_statistics">更多统计</string>
    <string name="data_detail">数据详情</string>
    <string name="indicator_specification">指标说明</string>
    <string name="percent">占比</string>
    <string-array name="indicator_specification_content">
        <item>订单量：门店实际订单总数量（含海星订单量）\n\n设备支付的订单（未支付不统计），不含启动退款订单\n\n充值支付订单：海星的充值订单，不含退款\n\n启动退款订单：只包含启动退款的订单\n\n充值退款订单：只包含充值退款的订单\n\n总退款金额：包含启动退款和充值退款金额</item>
        <item>设备数量：已绑定设备的总数量（不含删除设备）\n\n活跃设备量：实际产生订单的设备总数量\n\n设备活跃率：实际产生订单的设备占比\n\n设备故障率：出现过故障的设备占比\n\n设备离线率：持续离线30分钟及以上的设备占比\n\n设备频次：每台设备平均使用次数</item>
        <item>总用户量：下过订单的用户量\n\n新增用户量：新注册的用户数量\n\n新用户占比：新用户占总用户量的比例\n\n活跃用户量：下单的用户数量(不含海星订单)\n\n用户活跃率：下单用户占总用户量的比例\n\n用户复购率：下单次数超过1次的用户占比</item>
    </string-array>
    <string name="message_center">消息中心</string>
    <string name="message_setting">消息设置</string>
    <string name="clean_unread">一键已读</string>
    <string name="message_click_hint">点击查看设备详情，并获取更多操作。</string>
    <string name="go_update">前往更新</string>
    <string name="message_empty">暂无消息</string>
    <string name="home_income_title">今日收益</string>
    <string name="merchant_home_income_title">商家今日收益</string>
    <string name="personal_home_income_title">个人今日收益</string>
    <string name="home_trend_title">收益趋势</string>
    <string name="home_func_title">功能管理</string>
    <string name="device_manager">设备管理</string>
    <string name="signal">信号</string>
    <string name="device_category_no">设备类型/编号</string>
    <string name="device_no">设备编号</string>
    <string name="device_search_hint">搜索设备名称/模块编码 (IMEI）/设备编码</string>
    <string name="department">所属门店</string>
    <string name="belong_to_pt">所属营业点</string>
    <string name="department_empty">请先选择门店</string>
    <string name="device_category">设备类型</string>
    <string name="device_model">设备型号</string>
    <string name="floor">楼层</string>
    <string name="floor_f">楼层（F）</string>
    <string name="floor_hint">请输入设备所在楼层</string>
    <string name="device_model_empty">请先选择设备型号</string>
    <string name="network_status">网络状态</string>
    <string name="unbind_device">解绑设备</string>
    <string name="device_status">设备状态</string>
    <string name="operate_manager">操作管理</string>
    <string name="add_device_hint">绑定须知：\n1.设备先通电3分钟以上，再进行绑定操作；\n2.蓝牙设备，需要收集靠近设备1米以内操作</string>
    <string name="add_device">添加设备</string>
    <string name="new_device">新增设备</string>
    <string name="batch_update">批量修改</string>
    <string name="batch_start">批量启动</string>
    <string name="batch_transfer">批量转移</string>
    <string name="batch_setting">批量设置</string>
    <string name="batch_advanced_setting1">批量高级参数</string>
    <string name="batch_advanced_setting">批量\n高级参数</string>
    <string name="scan_input">扫码录入</string>
    <string name="configure_condition">配置条件</string>
    <string name="device_num_hint">全部%1$d台设备</string>
    <string name="device_model_search_hint">搜索设备型号</string>
    <string name="device_info">设备信息</string>
    <string name="pay_code">付款码</string>
    <string name="time_of_duration">持续时间</string>
    <string name="imei">IMEI</string>
    <string name="imei_title">模块编码（IMEI）</string>
    <string name="device_name">设备名称</string>
    <string name="device_name_hint">如：XX楼XX层XX号机</string>
    <string name="fun_configure">功能配置</string>
    <string name="add_manager_fun_configure">新增管理配置</string>
    <string name="scan_hint">扫描设备上的二维码</string>
    <string name="scan_pay_hint">扫描设备上的付款码</string>
    <string name="no_configure">未配置</string>
    <string name="configured">已配置</string>
    <string name="pay_code_error">该付款码无效</string>
    <string name="imei_code_error">该IMEI码无效</string>
    <string name="imei_code_error1">请扫描正确的IMEI</string>
    <string name="scan_code_error">无法识别该二维码</string>
    <string name="device_func_configuration_title">功能%1$d</string>
    <string name="invalid_error">无效码</string>
    <string name="allow_starfish_refund">允许海星充值退款</string>
    <string name="compel_use_starfish">强制使用\n海星</string>
    <string name="compel_no_pwd_pay">强制使用\n免密支付</string>
    <string name="no_pwd_pay">提示使用\n免密支付</string>
    <string name="model_name">模式名称</string>
    <string name="wash_time">洗涤时间</string>
    <string name="pulse_count">脉冲数</string>
    <string name="coupon_info">券信息</string>
    <string-array name="coupon_type">
        <item></item>
        <item>满减券</item>
        <item></item>
        <item>折扣券</item>
        <item>体验券</item>
    </string-array>
    <string name="coupon_shop">适用门店</string>
    <string name="phone">手机号</string>
    <string name="issue_coupons">发券</string>
    <string name="issue_coupons_user">发券用户</string>
    <string name="coupon_price">券金额</string>
    <string name="coupon_price_hint">输入范围0.01-100.00</string>
    <string name="experiential_price">体验价</string>
    <string name="experiential_price_hint">输入范围0-100.00</string>
    <string name="coupon_discount">券折扣</string>
    <string name="coupon_discount_hint">输入范围0.1-9.9</string>
    <string name="relief_ceiling">减免上限</string>
    <string name="relief_ceiling_hint">输入范围0.01-100.00</string>
    <string name="service_conditions">使用条件</string>
    <string name="full">满</string>
    <string name="service_conditions_hint">范围0-100.00</string>
    <string name="available">可用</string>
    <string name="issue_coupon_num">发券数量</string>
    <string name="issue_coupon_num_hint">范围1-10</string>
    <string name="validity_to">有效期至</string>
    <string name="coupon_device">适用设备</string>
    <string name="sure_issue_coupons">确认发券</string>
    <string name="price">价格</string>
    <string name="amount_hint">请输入金额</string>
    <string name="shop_location_detail">详细地址</string>
    <string name="setting">设置</string>
    <string name="change_password">修改密码</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="version">版本信息</string>
    <string name="cancel_account">注销账号</string>
    <string name="change_account">切换账号</string>
    <string name="logout">退出登录</string>
    <string name="unit_minute_hint">（分）</string>
    <string name="unit_yuan_hint">（元）</string>
    <string name="unit_folds_hint">（折）</string>
    <string name="unit_ge_hint">（个）</string>
    <string name="register">注册</string>
    <string name="register_info">注册信息</string>
    <string name="businesser_name">商户名称</string>
    <string name="businesser_name_hint">请输入商户名称</string>
    <string name="shop_manager_name">负责人名称</string>
    <string name="shop_manager_name_hint">请输入负责人名称</string>
    <string name="sms_code">验证码</string>
    <string name="password">密码</string>
    <string name="password_hint">6-12位大小写字母和数字的组合</string>
    <string name="password_again">验证密码</string>
    <string name="password_again_hint">请再次输入密码</string>
    <string name="affiliation_area">所属地区</string>
</resources>