<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="com.yunshang.haile_manager_android.data.entities.ExtAttrDtoItem" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:divider="@color/dividing_line_color"
        app:dividerPadding="16dp"
        app:showDividers="middle">

        <com.yunshang.haile_manager_android.ui.view.MultiTypeItemView
            android:id="@+id/item_device_fun_configuration_wash_time"
            style="@style/MultiTypePaddingHItemStyle"
            android:inputType="number"
            app:itemContent="@={item.unitAmountVal}"
            app:title="@{item.unitTile}"
            app:type="input"
            app:unitHint="@string/unit_minute_hint" />

        <com.yunshang.haile_manager_android.ui.view.MultiTypeItemView
            android:id="@+id/item_device_fun_configuration_wash_money"
            style="@style/MultiTypePaddingHItemStyle"
            android:inputType="numberDecimal"
            app:itemContent="@={item.unitPriceVal}"
            app:title="@string/price"
            app:type="input"
            android:hint="@string/amount_hint"
            app:unitHint="@string/unit_yuan_hint" />

        <com.yunshang.haile_manager_android.ui.view.MultiTypeItemView
            android:id="@+id/item_device_fun_configuration_pulse_count"
            style="@style/MultiTypePaddingHItemStyle"
            android:inputType="numberDecimal"
            app:itemContent="@={item.pulseVal}"
            app:title="@string/pulse_count"
            app:type="input"
            android:hint="@string/amount_hint"
            app:unitHint="@string/unit_ge_hint" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>